[package]
name = "calc_lib"
version = "1.0.1"
edition = "2021"
authors = ["eric (Sk3pz) skepz.dev@gmail.com"]
description = "A library for calculating things with correct order of operations"
repository = "https://github.com/sk3pz/calculate"
homepage = "https://github.com/sk3pz/calculate"
license = "MIT"
readme = "README.md"

[dependencies]
better_term = "1.0.4"